Fixed not centered user image

--- a/frontend/src/app/layout/header/header.component.scss
+++ b/frontend/src/app/layout/header/header.component.scss
@@ -31,6 +31,11 @@
     background-color: rgba(0, 0, 0, 0.05);
   }
 
+  .avatar-container {
+    display: flex;
+    align-items: center;
+  }
+
   .user-image {
     width: 32px;
     height: 32px;
